[1.5]
Fixed weird docking windows behavior when floating.
Fixed crash when opening a mesh that didn't contain index data.
Light's Power Spin control now works.
Light's direction normalize buttons wasn't working. Fixed.
Fixed several issues with some Linux distros (thanks guidry!). Ubuntu users should type make ubuntuinstall
Added support for different coordinate conventions (X up & Z up)

[1.4]
Added ability to take screenshots with F12 key. They're saved in the documents folder.
Fixed rare crash when using a material defined outside a resources.cfg but which depended on shaders defined there; and resources.cfg file was reloaded.
Windows: Application now comes as an installer, with file association included for ".ogre" files.

* The following changes have been mainly brought to you by "tdev" (Thomas Fischer):
Fixed mousewheel. It's now working. Also fixed imprecision (int->float)
Log window hidden by default, only shows upon error or through menu
Log window is now coloured.
Enforcing vsync: otherwise cpu waste and lots of warnings upon window resizing
Reloading a mesh no longer resets camera position
Now possible to close the log pane, overrode the panes' close button event
Windows: logs and config now stored in the user path
FPS & batch count displayed on bottom

* The following change has been brought to you by "toglia":
Linux: Fixed colour picker dialogs.


[1.3]
Reloading a resources.cfg file would stop the reloading at the first particle script encountered, since particle templates weren't being destroyed.
Reloading a resources.cfg now updates automatically the material in used in case such material and/or it's shaders were defined among those resources
Reloading resources.cfg with corrupted material data being in use could ocassionally cause crashes (and always in Linux)
Improved Linux stability
Updated FAQ

[1.21]
Fixed crash and odd behaviors introduced in v1.2 when using bone size slider without having the names being displayed

[1.2]