@@ -65,7 +65,7 @@ make install
 
 !!! IMPORTANT: UBUNTU USERS !!!
 OgreMeshy needs to have RW access to the folder "/home/user/.ogremeshy". The script "make install" will login as root, and may create the folder for the root user as owner instead of the local user.
-To solve this problem, type "make ubuntuinstall" instead.
+To solve this problem, type "make ubuntu_install" instead.
 
 
 Compiling under Mac OS X:
