@@ -5,6 +5,7 @@ Light's Power Spin control now works.
 Light's direction normalize buttons wasn't working. Fixed.
 Fixed several issues with some Linux distros (thanks guidry!). Ubuntu users should type make ubuntuinstall
 Added support for different coordinate conventions (X up & Z up)
+Now OgreMeshy is in charge of creating .ogremeshy folder in Linux version, also checks for access restrictions to the folder.
 
 [1.4]
 Added ability to take screenshots with F12 key. They're saved in the documents folder.
